add fetchchannels function, add channel components, split channels array to display three in one row, add some styling

--- a/src/scss/base/global.scss
+++ b/src/scss/base/global.scss
@@ -1,6 +1,6 @@
 @use "./src/scss/abstracts/colors.scss" as *;
 
-h1{
-    color: $light-black;
-    font-family: "Inter", sans-serif;
+
+#root {
+    background-color: $light-black;
 }
