--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,5 @@
 @use "./base/global.scss";
 //####abstracts####
 @use "./src/scss/abstracts/colors.scss" as *;
+//####components####
+@use "./src/components/channel";
