change to use of same class

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,4 @@
 @use "./src/scss/abstracts/colors.scss" as *;
 //####components####
 @use "./src/components/channel";
+@use "./src/components/program";
