--- a/src/components/_Channel.scss
+++ b/src/components/_Channel.scss
@@ -9,22 +9,28 @@
   color: $white;
   font-family: "Inter", sans-serif;
 }
-.channels {
+.channelsAndPrograms {
   display: flex;
   flex-direction: column;
   gap: 60px;
   align-items: center;
+  justify-content: center;
 }
-.channels-row {
+.channelsAndPrograms-row {
   display: flex;
-  gap: 40px;
+  gap: 20px;
   overflow-x: hidden;
+  justify-content: center;
+  align-items: center;
+  margin-inline: 40px;
 }
-/*channel container*/
-.channel {
+/*channel /program container*/
+.card {
   background-color: $white;
   padding: 16px 32px;
   border-radius: 4px;
+  margin-top: 40px;
+  align-items: center;
 }
 
 .image:nth-of-type(1) {
