add program style

--- a/src/components/_Channel.scss
+++ b/src/components/_Channel.scss
@@ -24,6 +24,9 @@
   align-items: center;
   margin-inline: 40px;
 }
+.heading {
+  color: #fff;
+}
 /*channel /program container*/
 .card {
   background-color: $white;
