--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,4 @@
 @use "./src/components/channel";
 @use "./src/components/program";
 @use "./src/components/header";
+@use "./src/components/categories";
