--- a/src/components/_Program.scss
+++ b/src/components/_Program.scss
@@ -1,4 +1,19 @@
+@use "./src/scss/abstracts/colors.scss" as *;
 .programs {
-    display: flex;
-    gap: 30px;
+  display: flex;
+  gap: 30px;
+}
+.bigCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+  border-radius: 4px;
+  margin-top: 30px;
+  width: 90%;
+  height: 100%;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  background-color: $white;
+  margin-inline: 40px;
+  margin-bottom: 100px;
 }
